Bug 124149 - Dialog theming/UX - widgets to configure border are too small for finger usage
Summary: Dialog theming/UX - widgets to configure border are too small for finger usage
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: iOS Editor (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: Other iOS
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2019-03-18 12:28 UTC by Nicolas Christener
Modified: 2019-04-05 10:14 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Printscreen showing the widgets on iOS (462.82 KB, image/png)
2019-03-18 12:29 UTC, Nicolas Christener
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Christener 2019-03-18 12:28:55 UTC
Description:
The widgets to configure borders around an element are too small to be used with a finger.

Steps to Reproduce:
1. Create a writer document in the iOS app
2. Create some text, select it and click "Edit > Edit paragraphe style" in the menu (Bearbeiten > Absatzvoralge bearbeiten... in German)
3. Chose for example "Borders" tab and try to use the buttons/widgets with a finger

Actual Results:
The widgets are too small and hard to use with a finger

Expected Results:
The widgets could be bigger and simpler to use with a finger


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 Nicolas Christener 2019-03-18 12:29:31 UTC
Created attachment 150051 [details]
Printscreen showing the widgets on iOS
Comment 2 Commit Notification 2019-03-29 14:31:30 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/92990b12f900ac0a12ce006f63b8c3d0f09b6b2f%5E%21

tdf#124149 add bigger 32px icons for border line and shadow

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Tomaz Vajngerl 2019-04-05 10:14:36 UTC
Used bigger 32px images for those.