tdf#124149 add bigger 32px icons for border line and shadow

Change-Id: I7ea382f3ba648657d2a6d009bf90dcc3be879c63