cui/source/tabpages/border.cxx
@@ -44,6 +44,7 @@
 #include <svl/int64item.hxx>
 #include <sal/macros.h>
 #include <com/sun/star/lang/XServiceInfo.hpp>
+#include <comphelper/lok.hxx>
 
 using namespace ::editeng;
 using ::com::sun::star::uno::Reference;
@@ -269,45 +270,82 @@ SvxBorderTabPage::SvxBorderTabPage(TabPageParent pParent, const SfxItemSet& rCor
     , m_xRemoveAdjcentCellBordersCB(m_xBuilder->weld_check_button("rmadjcellborders"))
     , m_xRemoveAdjcentCellBordersFT(m_xBuilder->weld_label("rmadjcellbordersft"))
 {
-    static const OUStringLiteral pnBorderImgIds[] =
+    static std::vector<OUStringLiteral> aBorderImageIds;
+
+    if (aBorderImageIds.empty())
     {
-        RID_SVXBMP_CELL_NONE,
-        RID_SVXBMP_CELL_ALL,
-        RID_SVXBMP_CELL_LR,
-        RID_SVXBMP_CELL_TB,
-        RID_SVXBMP_CELL_L,
-        RID_SVXBMP_CELL_DIAG,
-        RID_SVXBMP_HOR_NONE,
-        RID_SVXBMP_HOR_OUTER,
-        RID_SVXBMP_HOR_HOR,
-        RID_SVXBMP_HOR_ALL,
-        RID_SVXBMP_HOR_OUTER2,
-        RID_SVXBMP_VER_NONE,
-        RID_SVXBMP_VER_OUTER,
-        RID_SVXBMP_VER_VER,
-        RID_SVXBMP_VER_ALL,
-        RID_SVXBMP_VER_OUTER2,
-        RID_SVXBMP_TABLE_NONE,
-        RID_SVXBMP_TABLE_OUTER,
-        RID_SVXBMP_TABLE_OUTERH,
-        RID_SVXBMP_TABLE_ALL,
-        RID_SVXBMP_TABLE_OUTER2
-    };
+        if (comphelper::LibreOfficeKit::isActive())
+        {
+            aBorderImageIds.insert(aBorderImageIds.end(), {
+                RID_SVXBMP_CELL_NONE_32,
+                RID_SVXBMP_CELL_ALL_32,
+                RID_SVXBMP_CELL_LR_32,
+                RID_SVXBMP_CELL_TB_32,
+                RID_SVXBMP_CELL_L_32,
+                RID_SVXBMP_CELL_DIAG_32
+            });
+        }
+        else
+        {
+            aBorderImageIds.insert(aBorderImageIds.end(), {
+                RID_SVXBMP_CELL_NONE,
+                RID_SVXBMP_CELL_ALL,
+                RID_SVXBMP_CELL_LR,
+                RID_SVXBMP_CELL_TB,
+                RID_SVXBMP_CELL_L,
+                RID_SVXBMP_CELL_DIAG
+            });
+        }
+        aBorderImageIds.insert(aBorderImageIds.end(), {
+            RID_SVXBMP_HOR_NONE,
+            RID_SVXBMP_HOR_OUTER,
+            RID_SVXBMP_HOR_HOR,
+            RID_SVXBMP_HOR_ALL,
+            RID_SVXBMP_HOR_OUTER2,
+            RID_SVXBMP_VER_NONE,
+            RID_SVXBMP_VER_OUTER,
+            RID_SVXBMP_VER_VER,
+            RID_SVXBMP_VER_ALL,
+            RID_SVXBMP_VER_OUTER2,
+            RID_SVXBMP_TABLE_NONE,
+            RID_SVXBMP_TABLE_OUTER,
+            RID_SVXBMP_TABLE_OUTERH,
+            RID_SVXBMP_TABLE_ALL,
+            RID_SVXBMP_TABLE_OUTER2
+        });
+    }
 
-    for (size_t i = 0; i < SAL_N_ELEMENTS(pnBorderImgIds); ++i)
-        m_aBorderImgVec.emplace_back(StockImage::Yes, pnBorderImgIds[i]);
+    for (auto const & rImageId : aBorderImageIds)
+        m_aBorderImgVec.emplace_back(StockImage::Yes, rImageId);
 
-    static const OUStringLiteral pnShadowImgIds[SVX_BORDER_SHADOW_COUNT] =
+    static std::vector<OUStringLiteral> aShadowImageIds;
+    if (aShadowImageIds.empty())
     {
-        RID_SVXBMP_SHADOWNONE,
-        RID_SVXBMP_SHADOW_BOT_RIGHT,
-        RID_SVXBMP_SHADOW_TOP_RIGHT,
-        RID_SVXBMP_SHADOW_BOT_LEFT,
-        RID_SVXBMP_SHADOW_TOP_LEFT
-    };
+        if (comphelper::LibreOfficeKit::isActive())
+        {
+            aShadowImageIds.insert(aShadowImageIds.end(), {
+                RID_SVXBMP_SHADOWNONE_32,
+                RID_SVXBMP_SHADOW_BOT_RIGHT_32,
+                RID_SVXBMP_SHADOW_TOP_RIGHT_32,
+                RID_SVXBMP_SHADOW_BOT_LEFT_32,
+                RID_SVXBMP_SHADOW_TOP_LEFT_32
+            });
+        }
+        else
+        {
+            aShadowImageIds.insert(aShadowImageIds.end(), {
+                RID_SVXBMP_SHADOWNONE,
+                RID_SVXBMP_SHADOW_BOT_RIGHT,
+                RID_SVXBMP_SHADOW_TOP_RIGHT,
+                RID_SVXBMP_SHADOW_BOT_LEFT,
+                RID_SVXBMP_SHADOW_TOP_LEFT
+            });
+        }
+    }
 
-    for (size_t i = 0; i < SAL_N_ELEMENTS(pnShadowImgIds); ++i)
-        m_aShadowImgVec.emplace_back(StockImage::Yes, pnShadowImgIds[i]);
+    for (auto const & rImageId : aShadowImageIds)
+        m_aShadowImgVec.emplace_back(StockImage::Yes, rImageId);
+
     assert(m_aShadowImgVec.size() == SVX_BORDER_SHADOW_COUNT);
 
     // this page needs ExchangeSupport
